# grammarian

./: .gitignore  README.md  pyproject.toml
src/grammarian/: __init__.py  __main__.py  calculator.py  config.py
src/grammarian/cli/: __init__.py  main.py
src/grammarian/core/: __init__.py  models.py
src/grammarian/git/: __init__.py
src/grammarian/llm/: __init__.py  advisor.py
src/grammarian/metrics/: __init__.py  base.py  grammar.py  readability.py  spelling.py  style.py
src/redpen/: __init__.py  __main__.py  calculator.py  config.py
src/redpen/cli/: __init__.py  main.py
src/redpen/core/: __init__.py  models.py
src/redpen/git/: __init__.py  diff.py
src/redpen/llm/: __init__.py  advisor.py
src/redpen/metrics/: __init__.py  base.py  grammar.py  readability.py  spelling.py  style.py
tests/: __init__.py  test_base_metric.py  test_calculator.py  test_cli.py  test_config.py  test_git.py  test_grammar_metric.py  test_llm.py  test_metrics.py
